--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <section class="hero__container">
        <div class="hero__image__container">
          <img src="assets/hero.jpg" alt="hero image" class="hero__image">
-
+         <img src="assets/svg/herobgpattren.svg" alt="logo image" class="logo__image">
+         <img src="assets/svg/heroShape.svg" alt="logo shape" class="logo__shape">
        </div>
+       <br><br>
        <div class="hero__description">
          <h1 class="hero__text">
          Order food from favourite restaurants near you.
@@ -33,7 +35,7 @@
         <button class="button__primary">Order Now</button>
        </div>
       </section>
-      <br><br><br><br><br><br>
+      <br><br><br><br>
 
       <!-- Explore Menu -->
       <section class="explore__menu__container">
