--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
         <button class="button__primary">Order Now</button>
        </div>
       </section>
-      <br><br><br><br>
-
       <!-- Explore Menu -->
       <section class="explore__menu__container">
         <h1 class="explore__menu__text">Explore Our Menu</h1>
@@ -74,6 +72,18 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="explore__resturants__container">
+        <div class="explore__resturant__bg"></div>
+        <div class="explore__resturants__text">Order From 100s of resturants</div>
+         <div class="resturants__image1">
+           <img src="assets/restaurant1.jpg" alt="resturant image1" class="image1">
+           <img src="assets/restaurant2.jpg" alt="resturant image2" class="image2">
+         </div>
+         <div class="resturants__image2">
+           <img src="assets/restaurant3.jpg" alt="resturant image3" class="image3">
+           <img src="assets/restaurant4.jpg" alt="resturant image4" class="image4">
+         </div>
       </section>
     </main>
   </body>
