--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@
            <img src="assets/restaurant4.jpg" alt="resturant image4" class="image4">
          </div>
       </section>
+      <section class="explore__update">
+        <div class="updated">Stay Updated</div>
+         <div class="forms">
+           <form>
+             <input id="e_mail" type="email" placeholder="E-mail" required>
+           </form>
+           <button class="button__primary">Get Updates</button>
+         </div>
+      </section>
+      <section class="explore__end">
+        <img src="assets/12.png" alt="image__last" class="last__image">
+      </section>
     </main>
+    <footer class="stylings">
+      <div class="logo">
+        <img src="assets/logo.png" alt="logo" class="footer__logo">
+      </div>
+      <div class="list">
+        <li>Pricing</li>
+        <li>Terms and condition</li>
+        <li>Partnership</li>
+        <li>Career</li>
+        <li>Contact</li>
+      </div>
+      
+
+    </footer>
   </body>
 </html>
