--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             </div>
           </div>
         </div>
+        <div class="food__list__view__more">View More</div>
+      </div>
+    
       </section>
       <section class="explore__resturants__container">
         <div class="explore__resturant__bg"></div>
@@ -109,8 +112,9 @@
         <li>Career</li>
         <li>Contact</li>
       </div>
-      
-
     </footer>
+    <div class="author">
+      Kanishq Soni |© 2021 All rights reserved.
+    </div>
   </body>
 </html>
